Update dependencies, improve ad loading logic, and enhance connectivity handling
- Updated version in pubspec.yaml to 1.0.1+3.
- Added new dependencies in pubspec.lock: archive, cli_util, flutter_launcher_icons, image, and posix.
- Implemented connectivity checks before loading ads in multiple screens.
- Refactored ad loading logic to handle center and bottom banner ads separately.
- Updated ad unit IDs in admob_service.dart.
- Added Privacy Policy screen and navigation drawer item.
- Improved error handling and user feedback for ad loading status.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,12 +6,12 @@
     <application
         android:label="Learn Dart"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         
         <!-- AdMob App ID -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~3347511713"/>
+            android:value="ca-app-pub-5165221633271822~7740108112"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
